# dx-terminal-monitor

./: .env.example  .gitignore  Makefile  README.md  README_CN.md  advisor.py  advisor_history.py  advisor_monitor.py  advisor_prompt.txt  alerter.py  api.py  config.py  contract.py  llm.py  main.py  monitor.py  notifier.py  pyproject.toml  reporter.py  requirements-test.txt  requirements.txt  start.sh
.github/workflows/: test.yml
_bmad-output/: project-context.md
_bmad-output/api-reference/: terminal-markets-swagger.json
_bmad-output/implementation-artifacts/: 1-0-web3-infrastructure.md  1-1.md  1-2-disable-all-strategies.md  1-3-update-menu-help.md  2-1-add-strategy.md  2-2-pause-resume-agent.md  3-1-update-settings.md  3-2-withdraw-eth.md  4-1-activity-monitor-service.md  4-2-tg-message-push.md  4-3-monitor-control-commands.md  5-1-deposits-history.md  5-2-pnl-history.md  5-3-deposit-eth.md  6-1-eth-price.md  6-2-tokens-list.md  6-3-token-detail.md  6-4-launch-schedule.md  6-5-leaderboard.md  6-6-token-tweets.md  7-1-daily-report.md  7-2-threshold-alert.md  8-0-llm-client.md  8-1-data-collector.md  8-2-ai-advisor.md  8-3-suggestion-push.md  8-4-callback-execution.md  8-5-manual-trigger.md  8-6-analysis-history.md  sprint-status.yaml  tech-spec-main-py-command-refactoring.md
_bmad-output/planning-artifacts/: epics.md  status.md
_bmad-output/test-artifacts/: atdd-checklist-1-0.md  atdd-checklist-1-1.md  atdd-checklist-1-2.md  atdd-checklist-1-3.md  atdd-checklist-2-1.md  atdd-checklist-2-2.md  atdd-checklist-3-1.md  atdd-checklist-3-2.md  atdd-checklist-4-2.md  atdd-checklist-4-3.md  atdd-checklist-5-1-deposits-history.md  atdd-checklist-5-3-deposit-eth.md  atdd-checklist-6-1.md  atdd-checklist-6-2.md  atdd-checklist-6-3.md  atdd-checklist-6-5-leaderboard.md  atdd-checklist-6-6-token-tweets.md  atdd-checklist-7-1.md  atdd-checklist-7-2.md  atdd-checklist-8-0.md  atdd-checklist-8-1.md  atdd-checklist-8-2.md  atdd-checklist-8-3.md  atdd-checklist-8-4.md  (+30 more)
abi/: AgentVault.json
commands/: __init__.py  admin.py  advisor.py  monitor.py  query.py  withdraw.py
data/: index.html
docs/: api-contracts.md  architecture.md  development-guide.md  index.md  project-overview.md  project-scan-report.json  source-tree-analysis.md
tests/: README.md  __init__.py  conftest.py
utils/: __init__.py  error_handler.py  formatters.py  permissions.py  polling_monitor.py
(+59 files in other folders)
